force-app/main/default/objects/KimbleOne__ClosedPeriodAdjustmentReason__c/KimbleOne__ClosedPeriodAdjustmentReason__c.object-meta.xml
<CustomObject>
    <label>Closed Period Adjustment Reason</label>
    <nameField>
        <label>Closed Period Adjustment Reason Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Closed Period Adjustment Reasons</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>