force-app/main/default/objects/KimbleOne__ClosedPeriodAdjustmentReason__c/fields/KimbleOne__DomainClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DomainClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domain Class</label>
    <referenceTo>KimbleOne__DomainClass__c</referenceTo>
    <relationshipLabel>Closed Period Adjustment Reasons</relationshipLabel>
    <relationshipName>ClosedPeriodAdjustmentReasons</relationshipName>
    <type>Lookup</type>
</CustomField>