force-app/main/default/objects/KimbleOne__ClosedPeriodAdjustmentReason__c/fields/KimbleOne__IsCostGeneration__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsCostGeneration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cost Generation</label>
    <type>Checkbox</type>
</CustomField>