force-app/main/default/objects/KimbleOne__ClosedPeriodAdjustmentReason__c/fields/KimbleOne__IsInvoiced__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsInvoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoiced</label>
    <type>Checkbox</type>
</CustomField>