force-app/main/default/objects/KimbleOne__ClosedPeriodAdjustmentReason__c/fields/KimbleOne__IsRevenueGeneration__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsRevenueGeneration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Revenue Generation</label>
    <type>Checkbox</type>
</CustomField>