force-app/main/default/objects/KimbleOne__ClosedPeriodAdjustmentReason__c/fields/KimbleOne__IsRevenueRecognition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsRevenueRecognition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Revenue Recognition</label>
    <type>Checkbox</type>
</CustomField>