force-app/main/default/objects/KimbleOne__ClosedPeriodAdjustmentReason__c/fields/KimbleOne__IsSupplierInvoiced__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSupplierInvoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Supplier Invoiced</label>
    <type>Checkbox</type>
</CustomField>